[package]
name = "bitcoin-tx-signer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.0", features = ["serde", "std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
hex = "0.4.3"
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "2.0.12"